--- a/index.html
+++ b/index.html
@@ -37,12 +37,23 @@
       </div>
     </div>
   </nav>
-  <!-- <section class="container">
-    <div class="col-4">
-      <label for="name"></label>
-      <input type="text" id="name" />
+  <section class="home container" id="home">
+    <div class="row d-flex align-items-center">
+      <div class="col-8">
+        <h3 class="fw-semibold">Hi! I am</h3>
+        <h1 class="fw-bold">Raihan Akbar</h1>
+        <p>I am fullstack Developer based in Indonesia</p>
+        <a class="btn button" href="resume/Raihan Akbar - CV.pdf" download>Resume</a>
+      </div>
+      <div class="col-4">
+        <img src="images/potrait.png" alt="potrait">
+      </div>
     </div>
-  </section> -->
+    <div class="arrow w-100 d-flex align-items-center flex-column mt-5">
+      <a href="#about" class="text-decoration-none text-dark">More Info</a>
+      <img src="images/arrow.svg" alt="arrow" id="arrow">
+    </div>
+  </section>
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
