--- a/index.html
+++ b/index.html
@@ -102,7 +102,27 @@
             </div>
         </div>
     </section>
+    <section id="work" class="work container">
+        <div class="row d-flex align-items-center gap-5">
+            <div class="col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero expedita commodi
+                voluptatibus laboriosam doloremque voluptates deleniti, numquam, unde provident necessitatibus facilis
+                facere molestiae ullam beatae ut voluptas officiis ratione fugit soluta illo. Laboriosam minus odit
+                voluptate quos illum aliquid, veniam eius ea sint harum laudantium, exercitationem veritatis eaque
+                quibusdam tempore.</div>
+            <div class="col work-img">
+                <div id="work-1" class="work-img-item">
+                    <img src="images/work-1.png" alt="work 1" id="work-1">
+                </div>
+                <div id="work-2" class="work-img-item">
+                    <img src="images/work-2.png" alt="work 2" id="work-2">
+                </div>
+                <div id="work-3" class="work-img-item">
+                    <img src="images/work-3.png" alt="work 3" id="work-3">
+                </div>
 
+            </div>
+        </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
