--- a/index.html
+++ b/index.html
@@ -104,11 +104,12 @@
     </section>
     <section id="work" class="work container">
         <div class="row d-flex align-items-center gap-5">
-            <div class="col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero expedita commodi
-                voluptatibus laboriosam doloremque voluptates deleniti, numquam, unde provident necessitatibus facilis
-                facere molestiae ullam beatae ut voluptas officiis ratione fugit soluta illo. Laboriosam minus odit
-                voluptate quos illum aliquid, veniam eius ea sint harum laudantium, exercitationem veritatis eaque
-                quibusdam tempore.</div>
+            <div class="col">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis repudiandae officia, quasi
+                    minima rerum recusandae, animi aut omnis itaque natus enim quos. Voluptatem, quae beatae? Officiis
+                    quasi nemo ab qui facilis molestias sequi sit delectus eius quae, dolorum nobis architecto quaerat
+                    sed doloremque. Laborum accusantium alias id consequatur dicta reprehenderit!</p>
+            </div>
             <div class="col work-img">
                 <div id="work-1" class="work-img-item">
                     <img src="images/work-1.png" alt="work 1" id="work-1">
@@ -123,6 +124,51 @@
             </div>
         </div>
     </section>
+    <section id="contact" class="contact container">
+        <div class="row d-flex align-items-center gap-5">
+            <div class="col">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum aperiam saepe optio, fugit fuga
+                    laudantium, minus magnam deleniti cumque illo tempora tempore facilis aliquam modi quisquam dicta
+                    assumenda animi eligendi sunt. Cumque perferendis natus, consectetur accusantium, eius blanditiis
+                    quas,
+                    delectus atque cum commodi molestiae! Cupiditate quod vitae ab molestias! Impedit!</p>
+                <div class="row">
+                    <div class="col d-flex align-items-center">
+                        <img src="images/Facebook.svg" alt="facebook icon">
+                        <p>John Doe</p>
+                    </div>
+                    <div class="col d-flex align-items-center">
+                        <img src="images/Instagram.svg" alt="instagram icon">
+                        <p>@john_doe</p>
+                    </div>
+                    <div class="col d-flex align-items-center">
+                        <img src="images/Twitter.svg" alt="twitter icon">
+                        <p>@john_doe</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <form class="contact-form" onclick="onFormSubmit(event)">
+                    <div class="mb-3">
+                        <label for="inp_email" class="form-label">Email address</label>
+                        <input type="email" class="form-control" id="inp_email" placeholder="example@email.com">
+                    </div>
+                    <div class="mb-3">
+                        <label for="inp_subject" class="form-label">Subject</label>
+                        <input type="text" class="form-control" id="inp_subject" placeholder="Your Subject">
+                    </div>
+                    <div class="mb-3">
+                        <label for="inp_message" class="form-label">Message</label>
+                        <textarea class="form-control" id="inp_message" rows="3"></textarea>
+                    </div>
+                    <div class="d-flex justify-content-center mt-5">
+                        <button type="submit" class="btn button">Submit</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
