--- a/index.html
+++ b/index.html
@@ -22,37 +22,37 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="#home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Work</a>
+                        <a class="nav-link" href="#work">Work</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
     <section class="home container" id="home">
-        <div class="row d-flex align-items-center">
-            <div class="col-8">
+        <div class="row d-flex align-items-center flex-md-row flex-column-reverse">
+            <div class="col-12 col-md-8">
                 <h3 class="fw-semibold">Hi! I am</h3>
                 <h1 class="fw-bold">Raihan Akbar</h1>
                 <p>I am fullstack Developer based in Indonesia</p>
                 <a class="btn button" href="resume/Raihan Akbar - CV.pdf" download>Resume</a>
             </div>
-            <div class="col-4">
+            <div class="col-12 col-md-4 d-flex justify-content-md-end justify-content-center">
                 <img src="images/potrait.png" alt="potrait">
             </div>
         </div>
-        <div class="arrow w-100 d-flex align-items-center flex-column mt-5">
-            <a href="#about" class="text-decoration-none text-dark">More Info</a>
+        <a href="#about" class="text-decoration-none arrow w-100 d-flex align-items-center flex-column mt-5">
+            <div class="text-dark">More Info</div>
             <img src="images/arrow.svg" alt="arrow" id="arrow">
-        </div>
+        </a>
     </section>
     <section id="about" class="about container">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, sunt dicta minima aperiam itaque dolorem
@@ -103,14 +103,14 @@
         </div>
     </section>
     <section id="work" class="work container">
-        <div class="row d-flex align-items-center gap-5">
-            <div class="col">
+        <div class="row d-flex align-items-center">
+            <div class="col-12 col-md-6">
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis repudiandae officia, quasi
                     minima rerum recusandae, animi aut omnis itaque natus enim quos. Voluptatem, quae beatae? Officiis
                     quasi nemo ab qui facilis molestias sequi sit delectus eius quae, dolorum nobis architecto quaerat
                     sed doloremque. Laborum accusantium alias id consequatur dicta reprehenderit!</p>
             </div>
-            <div class="col work-img">
+            <div class="col-12 col-md-6 work-img">
                 <div id="work-1" class="work-img-item">
                     <img src="images/work-1.png" alt="work 1" id="work-1">
                 </div>
@@ -125,8 +125,8 @@
         </div>
     </section>
     <section id="contact" class="contact container">
-        <div class="row d-flex align-items-center gap-5">
-            <div class="col">
+        <div class="row d-flex align-items-center">
+            <div class="col-12 col-md-6">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum aperiam saepe optio, fugit fuga
                     laudantium, minus magnam deleniti cumque illo tempora tempore facilis aliquam modi quisquam dicta
                     assumenda animi eligendi sunt. Cumque perferendis natus, consectetur accusantium, eius blanditiis
@@ -134,20 +134,20 @@
                     delectus atque cum commodi molestiae! Cupiditate quod vitae ab molestias! Impedit!</p>
                 <div class="row">
                     <div class="col d-flex align-items-center">
-                        <img src="images/Facebook.svg" alt="facebook icon">
-                        <p>John Doe</p>
+                        <img class="w-25" src="images/Facebook.svg" alt="facebook icon">
+                        <p class="mb-0 ms-2">John Doe</p>
                     </div>
                     <div class="col d-flex align-items-center">
-                        <img src="images/Instagram.svg" alt="instagram icon">
-                        <p>@john_doe</p>
+                        <img class="w-25" src="images/Instagram.svg" alt="instagram icon">
+                        <p class="mb-0 ms-2">@john_doe</p>
                     </div>
                     <div class="col d-flex align-items-center">
-                        <img src="images/Twitter.svg" alt="twitter icon">
-                        <p>@john_doe</p>
+                        <img class="w-25" src="images/Twitter.svg" alt="twitter icon">
+                        <p class="mb-0 ms-2">@john_doe</p>
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col-12 col-md-6 contact-div">
                 <form class="contact-form" onclick="onFormSubmit(event)">
                     <div class="mb-3">
                         <label for="inp_email" class="form-label">Email address</label>
