--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
         <div class="container">
-            <a class="navbar-brand fs-4 fw-bold" href="#">Raihan Akbar</a>
+            <a class="navbar-brand fs-4 fw-bold" href="#home">Portfolio</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -39,10 +39,10 @@
     </nav>
     <section class="home container" id="home">
         <div class="row d-flex align-items-center flex-md-row flex-column-reverse">
-            <div class="col-12 col-md-8">
-                <h3 class="fw-semibold">Hi! I am</h3>
-                <h1 class="fw-bold">Raihan Akbar</h1>
-                <p>I am fullstack Developer based in Indonesia</p>
+            <div class="col-12 col-md-8 home-content">
+                <h3 class="fw-semibold font-home">Hi! I'am</h3>
+                <h1 class="fw-bold font-home">Raihan Akbar</h1>
+                <p>I am Fullstack Developer based in Indonesia</p>
                 <a class="btn button" href="resume/Raihan Akbar - CV.pdf" download>Resume</a>
             </div>
             <div class="col-12 col-md-4 d-flex justify-content-md-end justify-content-center">
@@ -135,15 +135,15 @@
                 <div class="row">
                     <div class="col d-flex align-items-center">
                         <img class="w-25" src="images/Facebook.svg" alt="facebook icon">
-                        <p class="mb-0 ms-2">John Doe</p>
+                        <p class="mb-0 social-name">John Doe</p>
                     </div>
                     <div class="col d-flex align-items-center">
                         <img class="w-25" src="images/Instagram.svg" alt="instagram icon">
-                        <p class="mb-0 ms-2">@john_doe</p>
+                        <p class="mb-0 social-name">@john_doe</p>
                     </div>
                     <div class="col d-flex align-items-center">
                         <img class="w-25" src="images/Twitter.svg" alt="twitter icon">
-                        <p class="mb-0 ms-2">@john_doe</p>
+                        <p class="mb-0 social-name">@john_doe</p>
                     </div>
                 </div>
             </div>
